# docs/swagger.json
@@ -229,51 +229,6 @@
                 }
             }
         },
-        "/profile/balance": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Profile"
-                ],
-                "summary": "Get balance by address",
-                "operationId": "getBalance",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "address",
-                        "name": "address",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "currency",
-                        "name": "currency",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/profile.Balance"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/profile/contacts": {
             "get": {
                 "security": [
@@ -300,50 +255,6 @@
                             "items": {
                                 "type": "string"
                             }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/profile/info": {
-            "get": {
-                "description": "get user by id or blockchain address",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Profile"
-                ],
-                "summary": "Get user",
-                "operationId": "profileInfo",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "get user profile by user id",
-                        "name": "id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "get user profile by blockchain address",
-                        "name": "address",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/profile.ShortUserProfile"
                         }
                     },
                     "400": {
@@ -471,6 +382,51 @@
                     },
                     "404": {
                         "description": ""
+                    }
+                }
+            }
+        },
+        "/profile/substrateBalance": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Profile"
+                ],
+                "summary": "Get substrateBalance by address",
+                "operationId": "getBalance",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "address",
+                        "name": "address",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "currency",
+                        "name": "currency",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/profile.Balance"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -692,6 +648,45 @@
                 }
             }
         },
+        "/profile/userInfo": {
+            "get": {
+                "description": "get user by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Profile"
+                ],
+                "summary": "Get user",
+                "operationId": "profileInfo",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "get user profile by user id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/profile.ShortUserProfile"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/profile/username": {
             "get": {
                 "consumes": [
@@ -726,6 +721,105 @@
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/substrate/base": {
+            "get": {
+                "description": "broadcast transaction",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Substrate"
+                ],
+                "summary": "broadcast transaction",
+                "operationId": "broadcast",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "sender",
+                        "name": "sender",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/substrate.BroadcastResult"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/substrate/fee": {
+            "get": {
+                "description": "calculate fee",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Substrate"
+                ],
+                "summary": "Calculate fee",
+                "operationId": "fee",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "sender",
+                        "name": "sender",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "receiver",
+                        "name": "receiver",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "value",
+                        "name": "value",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "currency",
+                        "name": "currency",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/substrate.FeeInfo"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "type": "string"
                         }
@@ -813,19 +907,41 @@
                 }
             }
         },
+        "info.Price": {
+            "type": "object",
+            "properties": {
+                "currency": {
+                    "type": "integer"
+                },
+                "value": {
+                    "type": "number"
+                }
+            }
+        },
+        "info.SubstrateUrl": {
+            "type": "object",
+            "properties": {
+                "network": {
+                    "type": "integer"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
         "info.TotalInfo": {
             "type": "object",
             "properties": {
-                "price": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "number"
+                "prices": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/info.Price"
                     }
                 },
                 "substrateUrls": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/info.SubstrateUrl"
                     }
                 }
             }
@@ -878,7 +994,7 @@
                     "type": "string"
                 },
                 "id": {
-                    "description": "id from info",
+                    "description": "id from userInfo",
                     "type": "string"
                 },
                 "isMigratory": {
@@ -886,7 +1002,7 @@
                     "type": "boolean"
                 },
                 "lastUpdate": {
-                    "description": "timestamp of the last info update",
+                    "description": "timestamp of the last userInfo update",
                     "type": "integer"
                 },
                 "name": {
@@ -917,11 +1033,11 @@
                     "type": "string"
                 },
                 "id": {
-                    "description": "id from info",
+                    "description": "id from userInfo",
                     "type": "string"
                 },
                 "lastUpdate": {
-                    "description": "timestamp of the last info update",
+                    "description": "timestamp of the last userInfo update",
                     "type": "integer"
                 },
                 "name": {
@@ -948,6 +1064,9 @@
                     "type": "string"
                 },
                 "from": {
+                    "type": "string"
+                },
+                "hash": {
                     "type": "string"
                 },
                 "id": {
@@ -995,6 +1114,48 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "substrate.BroadcastResult": {
+            "type": "object",
+            "properties": {
+                "hash": {
+                    "type": "integer"
+                }
+            }
+        },
+        "substrate.FeeInfo": {
+            "type": "object",
+            "properties": {
+                "fee": {
+                    "type": "integer"
+                }
+            }
+        },
+        "substrate.TxBase": {
+            "type": "object",
+            "properties": {
+                "blockHash": {
+                    "type": "string"
+                },
+                "fee": {
+                    "type": "string"
+                },
+                "genesisHash": {
+                    "type": "string"
+                },
+                "metadata": {
+                    "type": "string"
+                },
+                "nonce": {
+                    "type": "integer"
+                },
+                "specVersion": {
+                    "type": "integer"
+                },
+                "transactionVersion": {
+                    "type": "integer"
                 }
             }
         }
